# FightLines

./: .gitignore  Cargo.toml  README.md  generate_sprite_sheet.sh  manifesto.md
shared/: Cargo.toml
shared/src/: arrow.rs  direction.rs  facing_direction.rs  frame_count.rs  game.rs  id.rs  lib.rs  lobby.rs  located.rs  map.rs  name.rs  nonempty.rs  owner.rs  path.rs  player.rs  point.rs  rng.rs  sprite.rs  team_color.rs  tile.rs  unit.rs
shared/src/api/: create_lobby.rs  endpoint.rs  get_lobby.rs  mod.rs
shared/src/game/: action.rs  day.rs  event.rs  mobility.rs  outcome.rs  replenishment.rs  unit_index.rs
shared/src/sprites/: arrow_down.aseprite  arrow_down_moved.aseprite  arrow_left.aseprite  arrow_left_moved.aseprite  arrow_left_turn_down.aseprite  arrow_left_turn_down_moved.aseprite  arrow_left_turn_up.aseprite  arrow_left_turn_up_moved.aseprite  arrow_right.aseprite  arrow_right_moved.aseprite  arrow_right_turn_down.aseprite  arrow_right_turn_down_moved.aseprite  arrow_right_turn_up.aseprite  arrow_right_turn_up_moved.aseprite  arrow_up.aseprite  arrow_up_moved.aseprite  arrow_x.aseprite  arrow_x_moved.aseprite  arrow_y.aseprite  arrow_y_moved.aseprite  forest_tile.aseprite  fully_loaded_indicator.aseprite  grass_tile.aseprite  hills_tile.aseprite  infantry.aseprite  infantry_blue.aseprite  infantry_blue_moved.aseprite  infantry_red.aseprite  infantry_red_moved.aseprite  loaded_indicator.aseprite  many_blue.aseprite  (+15 more)
ui/: Cargo.toml  Makefile.toml  index.html
ui/src/: assets.rs  error.rs  global.rs  lib.rs  name.rs  route.rs  style.css  style.rs
(+98 files in other folders)
