[package]
name = "shared"
version = "0.1.0"
authors = ["Chadtech <chadtech0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde= "1.0"
bincode = "1.0"
rand = "0.8.4"
rand_pcg = "0.3.1"
hex = "0.4.2"
actix-web = "3"