[package]
version = "0.1.0"
name = "fightlines"
repository = "https://github.com/Chadtech/FightLines"
authors = ["Chadtech"]
description = "A video game about military combat; specifically keeping your forces in combat and well supplied"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"
pretty_assertions = "1.0.0"

[dependencies]
seed = "0.9.2"
shared = { path = "../shared" }
rand = "0.8.4"
hex = "0.4.2"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[dependencies.web-sys]
version = "0.3.58"
features = [ "HtmlImageElement", "MouseScrollEvent", "ScrollAreaEvent", "EventTarget" ]